input-sys/include/libinput.1.9.0.h


struct libinput;
struct libinput_device;
struct libinput_event;
struct libinput_event_tablet_tool;
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
double
libinput_event_gesture_get_dx_unaccelerated(
	struct libinput_event_gesture *event);
double
libinput_event_gesture_get_dy_unaccelerated(
	struct libinput_event_gesture *event);
double
libinput_event_gesture_get_scale(struct libinput_event_gesture *event);
double
libinput_event_gesture_get_angle_delta(struct libinput_event_gesture *event);
struct libinput_event *
libinput_event_tablet_tool_get_base_event(struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_x_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_y_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_pressure_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_distance_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_tilt_x_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_tilt_y_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_rotation_has_changed(
				struct libinput_event_tablet_tool *event);
enum libinput_config_status {
	LIBINPUT_CONFIG_STATUS_SUCCESS = 0,	
	LIBINPUT_CONFIG_STATUS_UNSUPPORTED,	
	LIBINPUT_CONFIG_STATUS_INVALID,		
};
enum libinput_config_status
libinput_device_config_rotation_set_angle(struct libinput_device *device,
					  unsigned int degrees_cw);