input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the relative delta of the unaccelerated motion vector of the"]
    #[doc = " current event. For gesture events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE, this function returns 0."]
    #[doc = ""]
    #[doc = " Relative unaccelerated motion deltas are normalized to represent those of a"]
    #[doc = " device with 1000dpi resolution. See @ref motion_normalization for more"]
    #[doc = " details. Note that unaccelerated events are not equivalent to 'raw' events"]
    #[doc = " as read from the device."]
    #[doc = ""]
    #[doc = " Any rotation applied to the device also applies to gesture motion"]
    #[doc = " (see libinput_device_config_rotation_set_angle())."]
    #[doc = ""]
    #[doc = " @return the unaccelerated relative x movement since the last event"]
    pub fn libinput_event_gesture_get_dx_unaccelerated(event: *mut libinput_event_gesture) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the relative delta of the unaccelerated motion vector of the"]
    #[doc = " current event. For gesture events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE, this function returns 0."]
    #[doc = ""]
    #[doc = " Relative unaccelerated motion deltas are normalized to represent those of a"]
    #[doc = " device with 1000dpi resolution. See @ref motion_normalization for more"]
    #[doc = " details. Note that unaccelerated events are not equivalent to 'raw' events"]
    #[doc = " as read from the device."]
    #[doc = ""]
    #[doc = " Any rotation applied to the device also applies to gesture motion"]
    #[doc = " (see libinput_device_config_rotation_set_angle())."]
    #[doc = ""]
    #[doc = " @return the unaccelerated relative y movement since the last event"]
    pub fn libinput_event_gesture_get_dy_unaccelerated(event: *mut libinput_event_gesture) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the absolute scale of a pinch gesture, the scale is the division"]
    #[doc = " of the current distance between the fingers and the distance at the start"]
    #[doc = " of the gesture. The scale begins at 1.0, and if e.g. the fingers moved"]
    #[doc = " together by 50% then the scale will become 0.5, if they move twice as far"]
    #[doc = " apart as initially the scale becomes 2.0, etc."]
    #[doc = ""]
    #[doc = " For gesture events that are of type @ref"]
    #[doc = " LIBINPUT_EVENT_GESTURE_PINCH_BEGIN, this function returns 1.0."]
    #[doc = ""]
    #[doc = " For gesture events that are of type @ref"]
    #[doc = " LIBINPUT_EVENT_GESTURE_PINCH_END, this function returns the scale value"]
    #[doc = " of the most recent @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE event (if"]
    #[doc = " any) or 1.0 otherwise."]
    #[doc = ""]
    #[doc = " For all other events this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_BEGIN, @ref"]
    #[doc = " LIBINPUT_EVENT_GESTURE_PINCH_END or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE."]
    #[doc = ""]
    #[doc = " @return the absolute scale of a pinch gesture"]
    pub fn libinput_event_gesture_get_scale(event: *mut libinput_event_gesture) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the angle delta in degrees between the last and the current @ref"]
    #[doc = " LIBINPUT_EVENT_GESTURE_PINCH_UPDATE event. For gesture events that"]
    #[doc = " are not of type @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE, this"]
    #[doc = " function returns 0."]
    #[doc = ""]
    #[doc = " The angle delta is defined as the change in angle of the line formed by"]
    #[doc = " the 2 fingers of a pinch gesture. Clockwise rotation is represented"]
    #[doc = " by a positive delta, counter-clockwise by a negative delta. If e.g. the"]
    #[doc = " fingers are on the 12 and 6 location of a clock face plate and they move"]
    #[doc = " to the 1 resp. 7 location in a single event then the angle delta is"]
    #[doc = " 30 degrees."]
    #[doc = ""]
    #[doc = " If more than two fingers are present, the angle represents the rotation"]
    #[doc = " around the center of gravity. The calculation of the center of gravity is"]
    #[doc = " implementation-dependent."]
    #[doc = ""]
    #[doc = " @return the angle delta since the last event"]
    pub fn libinput_event_gesture_get_angle_delta(event: *mut libinput_event_gesture) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " @return The generic libinput_event of this event"]
    pub fn libinput_event_tablet_tool_get_base_event(
        event: *mut libinput_event_tablet_tool,
    ) -> *mut libinput_event;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the x axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_x_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the y axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_y_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the pressure axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_pressure_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the distance axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = " For tablet tool events of type @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,"]
    #[doc = " this function always returns 1."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_distance_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the tilt x axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_tilt_x_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the tilt y axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_tilt_y_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_tablet"]
    #[doc = ""]
    #[doc = " Check if the z-rotation axis was updated in this event."]
    #[doc = " For events that are not of type @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS,"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_TIP, or"]
    #[doc = " @ref LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other"]
    #[doc = " than @ref LIBINPUT_EVENT_TABLET_TOOL_AXIS, @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_TIP, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY, or @ref"]
    #[doc = " LIBINPUT_EVENT_TABLET_TOOL_BUTTON."]
    #[doc = ""]
    #[doc = " @param event The libinput tablet tool event"]
    #[doc = " @return 1 if the axis was updated or 0 otherwise"]
    pub fn libinput_event_tablet_tool_rotation_has_changed(
        event: *mut libinput_event_tablet_tool,
    ) -> ::libc::c_int;
}
